# FPT

./: Cargo.toml  README.md  engine.h  main.cpp  memory.h
examples/: simple.fp
examples/math/: array.fp  autodiff.fp
examples/numeric/: comptime_test.fp  main.fp
src/: autodiff.rs  codegen.rs  codegen_elf.rs  codegen_pe_full.rs  codegen_x86.rs  comptime.rs  control.rs  cout.rs  executor.rs  lib.rs  main.rs  module.rs  parser.rs  patxter.rs  rtti.rs  sema.rs  staticptr.rs  switch.rs  tokenizer.rs  zir.rs
tests/: integration_test.rs
