[package]
name = "fpt" # FPT
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
parking_lot = "0.12"
regex = "1.7"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
lazy_static = "1.4"